# towards-the-end-of-greenish-x

./: .gitignore  Cargo.toml  Makefile.toml
animation_engine/: Cargo.toml
animation_engine/examples/example/: main.rs
animation_engine/resources/animation/: anim0.json  anim0.yml  anim1.json  anim1.yml
animation_engine/src/: animation.rs  animation_components.rs  audio_store.rs  components.rs  engine.rs  font_store.rs  gamepad_input_state.rs  image_store.rs  key_input_state.rs  lib.rs  localize.rs  render.rs
animation_engine_macro/: Cargo.toml
animation_engine_macro/src/: body.rs  lib.rs
rpg/: Cargo.toml  build.rs  resources.rc
rpg/i18n/: en-tmp.yml  jp-original.yml
rpg/resources/animation/battle/: blink-loop.yml  blink.yml  cover-battle-start-1.yml  cover-battle-start-2.yml  cover-battle-start-3.yml  cover-battle-start.yml  cover-fade-out.yml  enemy-damage-number-animation.yml  enemy-damage.yml  enemy-hp-bar-battle-start.yml  enemy-hp-bar-down.yml  enemy-hp-battle-start.yml  enemy-hp-down.yml  enemy-image-battle-start.yml  enemy-image-down.yml  enemy-shadow-image-battle-start.yml  enemy-shadow-image-down.yml  menu-attack-hide.yml  menu-attack-show.yml  menu-cursor-show.yml  menu-enemy-info-hide.yml  menu-enemy-info-show.yml  menu-items-hide.yml  menu-items-show.yml  menu-player-info-hide.yml  menu-player-info-show.yml  menu-skills-hide.yml  menu-skills-show.yml  menu-window-hide.yml  menu-window-shadow-hide.yml  menu-window-shadow-show.yml  menu-window-show.yml  message-fade-in.yml  message-fade-out.yml  message-window-battle-start-0.yml  message-window-battle-start-1.yml  message-window-battle-start-2.yml  player-damage-number-animation.yml  player-image-battle-start.yml  player-image-damage.yml  (+7 more)
rpg/resources/animation/explore/: cover-battle-start-1.yml  cover-battle-start-2.yml  cover-battle-start-3.yml  cover-battle-start.yml  (+5 more)
rpg/resources/game_data/: item-data.yml  level-example.yml  opening-data.yml
rpg/src/: assets_load.rs  game.rs  game_data.rs  init_logger.rs  input.rs  localization.rs  main.rs  save_data.rs
rpg/src/game/: battle.rs  explore.rs  game.rs  opening.rs  options.rs  player_state.rs  title.rs  user_guide.rs
rpg/src/game_data/: game_data.rs  item_data.rs  level_data.rs  opening_data.rs  player_data.rs
(+88 files in other folders)
