[package]
name = "animation_engine"
version = "0.0.0"
edition = "2018"

[dependencies]
animation_engine_macro = { path = "../animation_engine_macro" }
anyhow = "1.0.41"
ggez = "0.6.0-rc2"
legion = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["v4"] }
