[package]
name = "animation_engine"
version = "0.1.0"
edition = "2021"

[features]
default = [ "async-feature" ]
async-feature = [ "executor" ]

[dependencies]
animation_engine_macro = { path = "../animation_engine_macro" }
anyhow = "1.0.41"
executor = { path = "../executor", optional = true }
futures = "0.3.16"
# ggez = "0.7.0"
ggez = { path = "../../ggez" }
legion = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["v4"] }
