[package]
name = "animation_engine_macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.41"
legion = "0.4.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
syn = { version = "1.0.73", features = ["full"] }
thiserror = "1.0.26"
uuid = "0.8.2"
