[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
animation_engine = { path = "../animation_engine" }
anyhow = "1.0.42"
async-recursion = "0.3.2"
chrono = "0.4.19"
fern = "0.6.0"
futures = "0.3.16"
log = "0.4.14"
rand = "0.8.4"
rmp-serde = "0.15.5"
serde = "1.0.127"
serde_yaml = "0.8.17"

[build-dependencies]
embed-resource = "1.6.3"
